--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,10 @@
-main{
+.container{
     width: 100%;
     height: 100vh;
     position: relative;
     background-size: cover;
     background-position:  center;
     background-repeat: no-repeat;
+    background-color: rgba(0, 0, 0, .9);
     background-image: url(../assets/images/bg.png);
 }
