--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -33,3 +33,11 @@
         }
     }
 }
+
+@media only screen and (max-width:900px) {
+    .footer{
+        &-line{
+            display: none;
+        }
+    }
+}
